# src/hearsay/schemas/__init__.py
@@ -6,14 +6,18 @@ from hearsay.schemas.asr import ASRSelect, ASRStatus, ModelInfoRead
 from hearsay.schemas.common import Page
 from hearsay.schemas.meeting import MeetingCreate, MeetingRead
 from hearsay.schemas.segment import SegmentRead, TranscriptEvent
+from hearsay.schemas.speaker import IdentityRead, SpeakerRead, SpeakerRename
 
 __all__ = [
     "ASRSelect",
     "ASRStatus",
+    "IdentityRead",
     "MeetingCreate",
     "MeetingRead",
     "ModelInfoRead",
     "Page",
     "SegmentRead",
+    "SpeakerRead",
+    "SpeakerRename",
     "TranscriptEvent",
 ]
